...
            "state" : "translated",
            "value" : "登录以查看推荐"
          }
        }
      }
    },
    "Sign in to see your library" : {
      "comment" : "Library empty state when user is not signed in",
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
...
